[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/ChiKareGo2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Main_Menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 48
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PrisonSummit" type="Label" parent="."]
margin_top = 160.0
margin_right = 1280.0
margin_bottom = 403.0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Prison Summit
"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Credits" type="Label" parent="."]
margin_top = 560.0
margin_right = 160.0
margin_bottom = 760.0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_fonts/font = SubResource( 14 )
text = "As7ra
Plewr
Slour
"
align = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_top = 320.0
margin_right = 1280.0
margin_bottom = 400.0
focus_mode = 0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button3" type="Button" parent="."]
margin_left = -2.0
margin_top = 400.0
margin_right = 1278.0
margin_bottom = 480.0
focus_mode = 0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_fonts/font = SubResource( 13 )
enabled_focus_mode = 0
text = "NEW GAME"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button2" type="Button" parent="."]
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 560.0
focus_mode = 0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "EXIT"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
